# adventofcode2021-hs

./: adventofcode2021-hs.cabal
app/: Solve.hs
src/Solutions/: Day1.hs  Day14.hs  Day2.hs  Day3.hs  Day4.hs
test/Solutions/: Day14Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs
