cabal-version:         3.0
name:                  adventofcode2021-hs
version:               0.1.0.0
synopsis:              solutions to the 2021 iteration of adventofcode
author:                Bob Klaase

common common
  default-language:    Haskell2010
  build-depends:       base ^>=4.14.3.0,
                       array ^>=0.5.4.0,
                       containers ^>= 0.6.2.1,
                       text ^>= 1.2.3.2,
                       time ^>=1.9.3,
-- testing
                       hspec ^>= 2.7.10
common project
  build-depends:       adventofcode2021-hs ^>= 0.1.0.0

executable solve
  import:              common, project
  main-is:             Solve.hs
  hs-source-dirs:      ./app
  default-language:    Haskell2010

executable test
  import:              common, project
  hs-source-dirs:      ./test
  main-is:             Spec.hs
  other-modules:       Solutions.Day1Spec,Solutions.Day2Spec
  build-depends:       array ^>=0.5.4.0,
                       hspec >= 2.7.10,
  build-tool-depends:  hspec-discover:hspec-discover ^>=2.7.4

library
  import:              common
  exposed-modules:     AoC.Lib, Solutions.Day1, Solutions.Day2
  default-language:    Haskell2010
  hs-source-dirs:      ./src